# FDO-creation

./: LICENSE  README.md  pyproject.toml
FAIR-Digital-Object-Framework.github.io/: CNAME  README.md  W3C-REC.css  fdof-o.html  index.html
fdof-servers/: LICENSE  README.md  pom.xml
fdof-servers/src/main/java/org/fairdigitalobjectframework/server/: AcceptHeaderServer.java  CustomHTTPMethodsServer.java  SignpostingServer.java  StandardHTTPMethodsServer.java
fdof-servers/src/main/resources/digital object/: idRecord1.ttl  informationObject1.ttl  mediaObject1.csv  mediaObject2.csv  mediaObject3.json  metadataRecord1.ttl  metadataRecord2.ttl
fdof-servers/src/main/resources/identity record/: 2.ttl  mediaObject1.trig
fdof-servers/src/main/resources/metadata record/: mediaObject1.trig
fdof-servers/src/main/resources/type record/: mediaObject1.ttl
wizard/: fdof-o.ttl  fdof-shapes.ttl  gui.py  merge_for_protege.py  pipeline.py  roundtrip.py  serve.py  split_for_server.py  validate.py
